objects/Participant_Dashboard__c.object
<CustomObject>
    <fields>
        <fullName>Data_Category__c</fullName>
        <label>Data Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Name__c</fullName>
        <label>Data Name</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Value__c</fullName>
        <label>Data Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Game_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Game Detail</label>
        <referenceTo>Game_Detail__c</referenceTo>
        <relationshipLabel>Participant Dashboards</relationshipLabel>
        <relationshipName>DashBoard_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participant Dashboard</label>
    <nameField>
        <label>Participant Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participant Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>